# packages/unlock-js/openapi.yml
@@ -1431,6 +1431,27 @@ paths:
         400:
           $ref: '#/components/responses/400.Invalid'
 
+  /v2/purchase/onramp:
+    post:
+      operationId: onramp
+      security:
+        - User: []
+      description: Setup an onramp session for the user.
+
+      responses:
+        200:
+          description: Created onramp session.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  clientSecret:
+                    type: string
+
+        401:
+          $ref: '#/components/responses/401.NotAuthenticated'
+
   /v2/subscriptions/{network}/locks/{lockAddress}/keys/{keyId}:
     delete:
       operationId: cancelSubscription
